Bumping available heap for forked unit tests